Version 1.11 - Content and Bugfixes
- Added karma upgrade for +20% tier two production.
- Added 7 karma upgrades for free tier 2 buildings.
- Fixed karma upgrades tooltips going haywire.
- Fixed stats tab switching when building tab switched.
- Fixed flux not generating correctly after resets.

Version 1.10 - Content and Bugfixes
- Revised the bonus factory building.
	+ Now generates one of four different bonuses
	+ Three different bonuses can be stored at once
	+ Excess bonuses will automatically activate (can be disabled)
	
	+ Upgrades Revised (Faster Bonuses and Tireless Workers Unchanged):
	- Improved quality: Bonuses from the bonus factory last 20% longer.
	- Warehouses: Increases max packages that can be stored by 1
	
	+ Bonuses Generated:
	- +15% production for 60 seconds (33% chance)
	- 10 Seconds worth of extra time (33% chance)
	- +30% value from clicks for 60 seconds (33% chance)
	- +1% production permanently (1%)
	
- Revised the fluctuation lab building
	+ Now generates flux once per minute
	+ Flux can be used to activate four different effects
	+ 120 seconds after an effect is activated or when another effect is activated production is cut in half
	
	+ Upgrades Revised (All previous upgrades revised)
	- Faster Fluctuations: Decreases the time to generate a fluctuation point by 10 seconds.
	- Further Fluctuations: Increases production by 5%.
	- Flux Storage: Increases the amount of fluctuation points that can be stored by 15.
	- Lesser Consequences: Decreases the time that production is cut in half by 10 seconds.
	
	+ Effects:
	- Variable Production: Increases production by 50% for 90 seconds (cost: 30 flux points).
	- Variable Clicks: Increases the value from clicks by 75% for 90 seconds (cost: 26 flux points).
	- Variable Prices: Decreases the cost of buildings by 15% for 30 seconds. (cost: 30 flux points).
	- Translation: Increases production by 1% permanently. (cost: 35 flux points).

- Revised the cryogenic lab building: