@@ -1,9 +1,12 @@
 Version 1.11 - Content and Bugfixes
 - Added karma upgrade for +20% tier two production.
 - Added 7 karma upgrades for free tier 2 buildings.
+- Upgrades are will now be sorted by price.
+- Unavailable upgrades will be greyed out.
 - Fixed karma upgrades tooltips going haywire.
 - Fixed stats tab switching when building tab switched.
 - Fixed flux not generating correctly after resets.
+-
 
 Version 1.10 - Content and Bugfixes
 - Revised the bonus factory building.
